k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-scale-test
  labels:
    app: k8s-scale-test
spec:
  type: LoadBalancer
  selector:
    app: k8s-scale-test
  ports:
    - name: http
      port: 80
      targetPort: 3000
